--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -1,88 +1,33 @@
-
-[functions.spotify-login]
-enabled = true
-verify_jwt = true
-import_map = "./functions/spotify-login/deno.json"
-# Uncomment to specify a custom file path to the entrypoint.
-# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
-entrypoint = "./functions/spotify-login/index.ts"
-# Specifies static files to be bundled with the function. Supports glob patterns.
-# For example, if you want to serve static HTML pages in your function:
-# static_files = [ "./functions/spotify-login/*.html" ]
-
-[functions.spotify-callback]
-enabled = true
-verify_jwt = true
-import_map = "./functions/spotify-callback/deno.json"
-# Uncomment to specify a custom file path to the entrypoint.
-# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
-entrypoint = "./functions/spotify-callback/index.ts"
-# Specifies static files to be bundled with the function. Supports glob patterns.
-# For example, if you want to serve static HTML pages in your function:
-# static_files = [ "./functions/spotify-callback/*.html" ]
-
-[functions.spotify-access-token]
-enabled = true
-verify_jwt = true
-import_map = "./functions/spotify-access-token/deno.json"
-# Uncomment to specify a custom file path to the entrypoint.
-# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
-entrypoint = "./functions/spotify-access-token/index.ts"
-# Specifies static files to be bundled with the function. Supports glob patterns.
-# For example, if you want to serve static HTML pages in your function:
-# static_files = [ "./functions/spotify-access-token/*.html" ]
+# supabase/config.toml
+# FocusFlow - Supabase Functions configuration
+# Keep this file aligned with folders in supabase/functions/
 
 [functions.auth-email-signup]
 enabled = true
-verify_jwt = true
+verify_jwt = false
 import_map = "./functions/auth-email-signup/deno.json"
-# Uncomment to specify a custom file path to the entrypoint.
-# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
 entrypoint = "./functions/auth-email-signup/index.ts"
-# Specifies static files to be bundled with the function. Supports glob patterns.
-# For example, if you want to serve static HTML pages in your function:
-# static_files = [ "./functions/auth-email-signup/*.html" ]
 
 [functions.auth-email-login]
 enabled = true
-verify_jwt = true
+verify_jwt = false
 import_map = "./functions/auth-email-login/deno.json"
-# Uncomment to specify a custom file path to the entrypoint.
-# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
 entrypoint = "./functions/auth-email-login/index.ts"
-# Specifies static files to be bundled with the function. Supports glob patterns.
-# For example, if you want to serve static HTML pages in your function:
-# static_files = [ "./functions/auth-email-login/*.html" ]
-
-[functions.focus-log-session]
-enabled = true
-verify_jwt = true
-import_map = "./functions/focus-log-session/deno.json"
-# Uncomment to specify a custom file path to the entrypoint.
-# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
-entrypoint = "./functions/focus-log-session/index.ts"
-# Specifies static files to be bundled with the function. Supports glob patterns.
-# For example, if you want to serve static HTML pages in your function:
-# static_files = [ "./functions/focus-log-session/*.html" ]
 
 [functions.auth-apple]
 enabled = true
-verify_jwt = true
+verify_jwt = false
 import_map = "./functions/auth-apple/deno.json"
-# Uncomment to specify a custom file path to the entrypoint.
-# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
 entrypoint = "./functions/auth-apple/index.ts"
-# Specifies static files to be bundled with the function. Supports glob patterns.
-# For example, if you want to serve static HTML pages in your function:
-# static_files = [ "./functions/auth-apple/*.html" ]
 
 [functions.user-profile]
 enabled = true
 verify_jwt = true
 import_map = "./functions/user-profile/deno.json"
-# Uncomment to specify a custom file path to the entrypoint.
-# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
 entrypoint = "./functions/user-profile/index.ts"
-# Specifies static files to be bundled with the function. Supports glob patterns.
-# For example, if you want to serve static HTML pages in your function:
-# static_files = [ "./functions/user-profile/*.html" ]
+
+[functions.focus-presets]
+enabled = true
+verify_jwt = true
+import_map = "./functions/focus-presets/deno.json"
+entrypoint = "./functions/focus-presets/index.ts"
