Update amplify.yml with proper monorepo applications structure

--- a/amplify.yml
+++ b/amplify.yml
@@ -1,19 +1,19 @@
 version: 1
-frontend:
-  phases:
-    preBuild:
-      commands:
-        - cd softcomputers-site
-        - npm ci
-    build:
-      commands:
-        - cd softcomputers-site
-        - npm run build
-  artifacts:
-    baseDirectory: softcomputers-site/out
-    files:
-      - '**/*'
-  cache:
-    paths:
-      - softcomputers-site/node_modules/**/*
+applications:
+  - appRoot: softcomputers-site
+    frontend:
+      phases:
+        preBuild:
+          commands:
+            - npm ci
+        build:
+          commands:
+            - npm run build
+      artifacts:
+        baseDirectory: out
+        files:
+          - '**/*'
+      cache:
+        paths:
+          - node_modules/**/*
 
