Add cache headers to amplify.yml

--- a/amplify.yml
+++ b/amplify.yml
@@ -16,4 +16,9 @@ applications:
       cache:
         paths:
           - node_modules/**/*
+    customHeaders:
+      - pattern: '**/*'
+        headers:
+          - key: 'Cache-Control'
+            value: 'public, max-age=0, must-revalidate'
 
