Complete FocusFlow website redesign: premium UI, mobile-responsive, ready for deployment
- Redesigned all pages (Home, Features, Pricing, About, Sign In) with premium theme
- Added scroll animations and visual flow throughout
- Replaced emojis with premium Lucide icons
- Redesigned Header and Footer to match premium aesthetic
- Enhanced FocusFlow branding with animated gradient text
- Fixed all TypeScript errors and build issues
- Added mobile responsiveness across all pages
- Configured amplify.yml for AWS deployment
- Added comprehensive deployment guide
- All pages tested and building successfully

--- a/focusflow-site/amplify.yml
+++ b/focusflow-site/amplify.yml
@@ -3,17 +3,16 @@ frontend:
   phases:
     preBuild:
       commands:
-        - cd softcomputers-site
+        - cd focusflow-site
         - npm ci
     build:
       commands:
-        - cd softcomputers-site
+        - cd focusflow-site
         - npm run build
   artifacts:
-    baseDirectory: softcomputers-site/out
+    baseDirectory: focusflow-site/out
     files:
       - '**/*'
   cache:
     paths:
-      - softcomputers-site/node_modules/**/*
-
+      - focusflow-site/node_modules/**/*
