--- a/amplify.yml
+++ b/amplify.yml
@@ -3,9 +3,15 @@ frontend:
   phases:
     preBuild:
       commands:
+        - echo "Current directory:" && pwd
+        - echo "Listing root directory:" && ls -la
+        - echo "Checking for focusflow-site:" && ls -la focusflow-site/ | head -5 || echo "Directory not found"
         - cd focusflow-site && npm ci
     build:
       commands:
+        - echo "Current directory:" && pwd
+        - echo "Listing root directory:" && ls -la
+        - echo "Checking for focusflow-site:" && ls -la focusflow-site/ | head -5 || echo "Directory not found"
         - cd focusflow-site && npm run build
   artifacts:
     baseDirectory: focusflow-site/out
