--- a/focusflow-site/package.json
+++ b/focusflow-site/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3000",
+    "dev:port": "next dev",
     "build": "next build",
+    "build:static": "NODE_ENV=production next build",
     "start": "next start",
     "lint": "eslint"
   },
