--- a/FocusFlow/Info.plist
+++ b/FocusFlow/Info.plist
@@ -41,5 +41,7 @@
 		<string>audio</string>
 		<string>fetch</string>
 	</array>
+	<key>ITSAppUsesNonExemptEncryption</key>
+	<false/>
 </dict>
 </plist>
