fix: Critical P0 fixes before launch
1. Widget URL Scheme Fix
   - Added 'focusflow' to CFBundleURLSchemes in Info.plist
   - Fixes ALL widget deep links (start, pause, preset selection)

2. Task Locking Fix
   - Changed from original index to visible sorted index
   - Free users no longer see locked tasks at top of list
   - Lock state now matches visual position

3. Daily Reminder Time Fix
   - Changed to use hour/minute integers directly
   - Removes timezone/DST issues from Date extraction
   - Notifications now fire at correct time

4. Sign Out Flow Fix
   - Returns to guest mode instead of signedOut state
   - Cancels all notifications before sign out
   - Pushes pending changes before logout
   - Users can continue using app after sign out

--- a/FocusFlow/Info.plist
+++ b/FocusFlow/Info.plist
@@ -12,6 +12,7 @@
 			<key>CFBundleURLSchemes</key>
 			<array>
 				<string>ca.softcomputers.FocusFlow</string>
+				<string>focusflow</string>
 			</array>
 		</dict>
 		<dict>
