--- a/FocusFlow/Info.plist
+++ b/FocusFlow/Info.plist
@@ -44,5 +44,9 @@
 	</array>
 	<key>ITSAppUsesNonExemptEncryption</key>
 	<false/>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>FocusFlow uses the microphone for voice input, allowing you to speak commands to Flow AI hands-free.</string>
+	<key>NSSpeechRecognitionUsageDescription</key>
+	<string>FocusFlow uses speech recognition to convert your voice into text for Flow AI commands.</string>
 </dict>
 </plist>
